--- a/TP integrador JS/index.html
+++ b/TP integrador JS/index.html
@@ -39,6 +39,7 @@
       </div>
     </nav>
 
+    <main></main>
     <div>
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner carouselDiv">
@@ -218,37 +219,38 @@
   <div class="row">
     <div class="col mb-3">
       <p>Cantidad</p>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="cantidad">
+        <input id="cantidad" type="number" class="form-control" id="exampleFormControlInput1" placeholder="Cantidad" min=1 max=5>
   </div>
   <div class="col mb-3">
     <p>Categoria</p>
-    <select id="categoria" class="form-select">
-      <option>Estudiante</option>
-      <option>Trainee</option>
-      <option>Junior</option>
+    <select class="form-select">
+      <option hidden>Categoria</option>
+      <option value=80>Estudiante</option>
+      <option value=50>Trainee</option>
+      <option value=15>Junior</option>
     </select>
   </div>
   </div>
   <div class="row">
-    <div class="card bg-primary mb-3">
-      <div class="card-body">
-        <p>Resultado calculo JS</p>
+    <div class="card mb-3">
+      <div>
+        <p id="pagar" style="padding-top: 10px;">Total a pagar: $</p>
       </div>
     </div>
-    <!--Aca va a ir el espacio con el resultado asociado al javascript-->
-
+<div class="container"></div>
   </div>
   <div class="row">
     <div class="col mb-3 d-grid gap-2">
-      <button class="btn btn-success" type="button" style="background-color: rgb(98, 175, 98);">Borrar</button>
+      <button id="borrar" class="btn btn-success" type="button" style="background-color: rgb(98, 175, 98);">Borrar</button>
     </div>
     <div class="col mb-3 d-grid gap-2">
-      <button class="btn btn-success" type="button" style="background-color: rgb(98, 175, 98);">Resumen</button>
+      <button id="resumen" class="btn btn-success" type="reset" style="background-color: rgb(98, 175, 98);">Resumen</button>
     </div>
   </div>
 </div>
+</div>
   <br>
-
+</main>
     
 
   <footer class="footerColor bg-gradient p-2 text-white px-5">
@@ -282,7 +284,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
   crossorigin="anonymous"></script>
-  <div class="container">
+  <script src="js/javascript.js"></script>
 </body>
 
   
