--- a/TP integrador JS/index.html
+++ b/TP integrador JS/index.html
@@ -176,7 +176,7 @@
 
                                                    <!--INFO DESCUENTOS-->
 
-<div class="container-fluid" style="max-width:50rem;">
+<div class="container-fluid w-50 mx-auto">
   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
     <div class="col">
       <div class="card border-primary border-2 rounded-0">
@@ -218,7 +218,7 @@
   <h2>VALOR DE TICKET $200</h2>
 </div>
 
-<form class="row g-2 w-75 mx-auto" >
+<form class="row g-2 w-50 mx-auto" >
   <div class="col-6">
      <input type="text" class="form-control" placeholder="Nombre"> 
   </div>
